mo-fmt/tests/snapshots/format__fixtures@imports__comment-in-section.mo.snap
---
source: tests/format.rs
expression: out
input_file: tests/format/imports/comment-in-section.mo
---
// header
import A "A";
// import B "B";
import C "C";
actor {};

// note
object Tail {
  public let x = 1;
};
