mo-fmt/tests/snapshots/format__fixtures@imports__extra-blanks.mo.snap
---
source: tests/format.rs
expression: out
input_file: tests/format/imports/extra-blanks.mo
---
import A "A";

import { B; C } "BC";

actor {};
