mo-fmt/tests/snapshots/format__fixtures@imports__glued-section.mo.snap
---
source: tests/format.rs
expression: out
input_file: tests/format/imports/glued-section.mo
---
import A "A";
import B "B";
actor {};
