mo-fmt/tests/snapshots/format__fixtures@imports__no-imports.mo.snap
---
source: tests/format.rs
expression: out
input_file: tests/format/imports/no-imports.mo
---
let x = 1;

let y = 2;
